bg-samples/sample-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-blue
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-deployment
      version: blue
  template:
    metadata:
      labels:
        app: sample-deployment
        version: blue
    spec:
      containers:
      - name: sample-deployment
        image: nginx:1.25.3
        ports:
        - containerPort: 80
