bg-samples/sample-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-blue
  namespace: default
spec:
  selector:
    app: sample-deployment
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
