bg-samples/sample-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sample-httproute
  namespace: default
spec:
  parentRefs:
  - name: sample-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: Exact
        value: /
      headers:
      - name: "version"
        value: "blue"
    backendRefs:
    - name: sample-service-blue
      port: 80
  - matches:
    - path:
        type: Exact
        value: /
      headers:
      - name: "version"
        value: "green"
    backendRefs:
    - name: sample-service-green
      port: 80
